--- a/BINAES_Proyecto/BINAES_Proyecto/BINAES_Proyecto.csproj
+++ b/BINAES_Proyecto/BINAES_Proyecto/BINAES_Proyecto.csproj
@@ -46,7 +46,9 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Area.cs" />
         <Compile Include="BuscarEjemplarDAO.cs" />
+        <Compile Include="Coleccion.cs" />
         <Compile Include="Ejemplar.cs" />
         <Compile Include="Forms\frmBuscar.cs">
           <SubType>Form</SubType>
@@ -102,12 +104,18 @@
         <Compile Include="frmBinaesMain.Designer.cs">
             <DependentUpon>frmBinaesMain.cs</DependentUpon>
         </Compile>
+        <Compile Include="Genero.cs" />
+        <Compile Include="GeneroDAO.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Tipo.cs" />
         <Compile Include="Usuario.cs" />
         <Compile Include="UsuarioDAO.cs" />
         <EmbeddedResource Include="Forms\frmBuscar.resx">
           <DependentUpon>frmBuscar.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Forms\frmColeccion.resx">
+          <DependentUpon>frmColeccion.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Forms\frmInicio.resx">
           <DependentUpon>frmInicio.cs</DependentUpon>
