ADD: Comandos de imagen sin SQL todavia

--- a/BINAES_Proyecto/BINAES_Proyecto/BINAES_Proyecto.csproj
+++ b/BINAES_Proyecto/BINAES_Proyecto/BINAES_Proyecto.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Genero.cs" />
     <Compile Include="GeneroDAO.cs" />
     <Compile Include="Idioma.cs" />
+    <Compile Include="IMGDAO.cs" />
     <Compile Include="Palabras_Clave.cs" />
     <Compile Include="PrestamoDAO.cs" />
     <Compile Include="Program.cs" />
